--- a/sites/docs/src/pages/toast.astro
+++ b/sites/docs/src/pages/toast.astro
@@ -7,6 +7,7 @@ import InstallBlock from '../components/features/toast/InstallBlock.astro'
 import ApiTable from '../components/features/toast/ApiTable.astro'
 import OptionTable from '../components/features/toast/OptionTable.astro'
 import Playground from '../components/features/toast/Playground'
+import TableOfContents from '../components/features/toast/TableOfContents.astro'
 import { libraries } from '../content/libraries'
 import { buildSoftwareSchema } from '../seo/jsonld'
 
@@ -54,6 +55,9 @@ const jsonLd = buildSoftwareSchema(lib)
         </div>
       </div>
     </section>
+
+    <!-- Table of Contents -->
+    <TableOfContents />
 
     <!-- Install -->
     <section id="install" class="scroll-mt-20 pb-16">
